--- a/.gitignore
+++ b/.gitignore
@@ -1,138 +1,71 @@
-# Django #
+# Python bytecode and compiled files
+*.py[cod]
+__pycache__/
+*.so
+
+# Virtual environment directories
+env/
+venv/
+ENV/
+env.bak/
+.venv/
+
+# Django specific
 *.log
 *.pot
 *.pyc
-__pycache__
 db.sqlite3
-media
+media/
+staticfiles/
 
-# Backup files # 
-*.bak 
+# Secrets and configuration files
+.env
+*.env
 
-# If you are using PyCharm # 
-# User-specific stuff
-.idea/**/workspace.xml
-.idea/**/tasks.xml
-.idea/**/usage.statistics.xml
-.idea/**/dictionaries
-.idea/**/shelf
+# IDE and editor specific files
+.vscode/
+.idea/
+*.swp
+*.swo
+*.swn
+*.sublime-project
+*.sublime-workspace
 
-# AWS User-specific
-.idea/**/aws.xml
+# OS generated files
+.DS_Store
+Thumbs.db
 
-# Generated files
-.idea/**/contentModel.xml
+# Python packaging
+*.egg
+*.egg-info/
+dist/
+build/
+*.manifest
 
-# Sensitive or high-churn files
-.idea/**/dataSources/
-.idea/**/dataSources.ids
-.idea/**/dataSources.local.xml
-.idea/**/sqlDataSources.xml
-.idea/**/dynamic.xml
-.idea/**/uiDesigner.xml
-.idea/**/dbnavigator.xml
+# Celery beat schedule
+celerybeat-schedule
+celerybeat.pid
 
-# Gradle
-.idea/**/gradle.xml
-.idea/**/libraries
+# Coverage and testing
+.coverage
+htmlcov/
+*.cover
+*.py,cover
 
-# File-based project format
-*.iws
+# Migrations
+*/migrations/__pycache__/
+*/migrations/*.pyc
+*/migrations/*.pyo
+*/migrations/*.log
+*/migrations/*.swp
+*/migrations/*.swo
+*/migrations/*.swn
 
-# IntelliJ
-out/
+# Logs
+*.log
+*.out
+*.err
 
-# JIRA plugin
-atlassian-ide-plugin.xml
-
-# Python # 
-*.py[cod] 
-*$py.class 
-
-# Distribution / packaging 
-.Python build/ 
-develop-eggs/ 
-dist/ 
-downloads/ 
-eggs/ 
-.eggs/ 
-lib/ 
-lib64/ 
-parts/ 
-sdist/ 
-var/ 
-wheels/ 
-*.whl
-*.egg-info/ 
-.installed.cfg 
-*.egg 
-*.manifest 
-*.spec 
-
-# Installer logs 
-pip-log.txt 
-pip-delete-this-directory.txt 
-
-# Unit test / coverage reports 
-htmlcov/ 
-.tox/ 
-.coverage 
-.coverage.* 
-.cache 
-.pytest_cache/ 
-nosetests.xml 
-coverage.xml 
-*.cover 
-.hypothesis/ 
-
-# Jupyter Notebook 
-.ipynb_checkpoints 
-
-# pyenv 
-.python-version 
-
-# celery 
-celerybeat-schedule.* 
-
-# SageMath parsed files 
-*.sage.py 
-
-# Environments 
-.env 
-.venv 
-env/ 
-venv/ 
-ENV/ 
-env.bak/ 
-venv.bak/ 
-
-# mkdocs documentation 
-/site 
-
-# mypy 
-.mypy_cache/ 
-
-# Sublime Text # 
-*.tmlanguage.cache 
-*.tmPreferences.cache 
-*.stTheme.cache 
-*.sublime-workspace 
-*.sublime-project 
-
-# sftp configuration file 
-sftp-config.json 
-
-# Package control specific files Package 
-Control.last-run 
-Control.ca-list 
-Control.ca-bundle 
-Control.system-ca-bundle 
-GitHub.sublime-settings 
-
-# Visual Studio Code # 
-.vscode/* 
-!.vscode/settings.json 
-!.vscode/tasks.json 
-!.vscode/launch.json 
-!.vscode/extensions.json 
-.history
+# Static and media (if managed locally)
+static/
+media/
