--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,41 +1,13 @@
-//  {
-    // Use IntelliSense to learn about possible attributes.
-    // Hover to view descriptions of existing attributes.
-    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
-//     "version": "0.2.0",
-//     "configurations": [
-//         {
-//             "name": "Python Debugger: Django",
-//             "type": "python",
-//             "request": "launch",
-//             "program": "${workspaceFolder}/manage.py",
-//             "args": [
-//                 "runserver",
-//                 "0.0.0.0:8002"
-//             ],
-//             "django": true,
-//             "justMyCode": true,
-//             "autoReload": true
-//         }
-//     ]
-// }
-
-
 {
-    "version": "0.2.0",
-    "configurations": [
+  "version": "0.2.0",
+  "configurations": [
       {
-        "name": "Python Debugger: Django",
-        "type": "python",
-        "request": "launch",
-        "program": "${workspaceFolder}/manage.py",
-        "args": [
-          "runserver",
-          "localhost:8000"  // Change here
-        ],
-        "django": true,
-        "justMyCode": true,
-        "autoReload": true
+          "name": "Django Debug",
+          "type": "python",
+          "request": "launch",
+          "program": "${workspaceFolder}/manage.py",
+          "args": ["runserver"],
+          "django": true
       }
-    ]
-  }
+  ]
+}
